2023/08/01 [Top] 22. Generate Parentheses